<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trier Bus Time Tracker</string>
    <string name="app_name_about">Trier Bus Time Tracker | About</string>
    <string name="settings_title">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_delete_config">Delete config</string>
    <string name="action_about_tbbt">About</string>
    <string name="action_invite">Invite friends...</string>
    <string name="bustime_arrival_text">Arrival time: %1$s %2$s %3$s%4$s</string>
    <string name="no_network_connection_text">No network connection.</string>
    <string name="item_already_on_favorites_list_text">This item is already on favorites list</string>
    <string name="favorite_item_deleted">Removed %s from favorites.</string>
    <string name="settings_delete_everything_button_text">Delete all settings</string>
    <string name="settings_delete_everything_caption">Delete all settings</string>
    <string name="bustime_no_bus">There are no buses in the next hour.</string>
    <string name="about_developer_text"><b>Development</b>:\nChristopher Kaster</string>
    <string name="about_special_thanks"><b>Special thanks to</b>:\nDaniel Fett\nMarc Serre from the \"Noun Project\" (App icon)</string>
    <string name="about_data_text"><b>About the data</b>:\nThe realtime data is parsed from the SWT (Stadtwerke Trier) realtime information website. Neither this project nor the author are somehow related to the SWT.</string>
    <string name="settings_use_auto_reload_text">Use Auto-Reload</string>
    <string name="settings_auto_reload_caption">Automatic bus time reloading</string>
    <string name="settings_app_update_caption">App update settings</string>
    <string name="settings_use_mobile_conn_for_app_update">Use mobile connection for app updates</string>
    <string name="settings_use_notifications_reload_text">Push notification when bus times change</string>
    <string name="loading_dialog_text">loading...</string>
    <string name="action_check_updates">Check for updates</string>
    <string name="no_update_text">No updates available</string>
    <string name="shortcut_created">Added shortcut \'%1$s\' to homescreen</string>
    <string name="server_response_error">There seems to be a problem with the server. Error code \'%1$d\' received.</string>
    <string name="connection_failed">Connection to server failed.</string>
    <string name="invite_text">Hey, check out Trier Bus Time Tracker! Download link: http://www.auto-update-apk.com/download/de.kasoki.trierbustimetracker or here is a QR code: http://www.auto-update-apk.com/qrcode/de.kasoki.trierbustimetracker</string>
    <string name="invite_text_title">Tell others about Trier Bus Time Tracker</string>

</resources>