<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_check_update"
        android:orderInCategory="777"
        android:showAsAction="never"
        android:title="@string/action_check_updates" />

    <item
        android:id="@+id/action_invite"
        android:orderInCategory="789"
        android:showAsAction="never"
        android:title="@string/action_invite" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="888"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    
    <item 
        android:id="@+id/action_about_tbbt"
        android:orderInCategory="999"
        android:showAsAction="never"
        android:title="@string/action_about_tbbt"/>

</menu>